# GEANT4examples

./: README.md
ENUBET/: CMakeLists.txt  CMakeSettings.json  Demonstrator.cc
ENUBET/include/: .timestampList  AbsSensitiveDetector.hh  DetectorConstruction.hh  EventAction.hh  GapSensitiveDetector.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunThread.hh  SipmSensitiveDetector.hh
ENUBET/mac/: gpsP.mac  gun.mac  run_calibration_mu+_5GeV.mac  run_calibration_pi+_5GeV.mac  run_e-_1GeV.mac  run_e-_2GeV.mac  run_e-_3GeV.mac  run_e-_4GeV.mac  run_e-_5GeV.mac  run_sample.mac  test.mac
ENUBET/src/: DetectorConstruction.cc  EventAction.cc  MuonSensitiveDetector.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunThread.cc  SipmSensitiveDetector.cc  SpessoreSensitiveDetector.cc  StackingAction.cc
ENUBETcosmics/: CMakeSettings.json  Demonstrator.cc
ENUBETcosmics/include/: MuonSensitiveDetector.hh  PrimaryGeneratorAction.hh  RunAction.hh  SpessoreSensitiveDetector.hh  StackingAction.hh
ENUBETcosmics/src/: AbsSensitiveDetector.cc  ActionInitialization.cc  DetectorConstruction.cc  GapSensitiveDetector.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunThread.cc
WuShaknov/: CMakeLists.txt  WS.cpp
WuShaknov/include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  run.hh  stepping.hh
WuShaknov/src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  run.cc  stepping.cc
block/: CMakeLists.txt  block.cpp
block/include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
block/src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
